# Assistive-Robotics

./: .gitignore  README.md  all_devices_git_pull.bash  all_devices_initial_setup.bash  all_devices_initial_setup_new.bash  all_devices_shutdown.bash  all_devices_terminal.bash  correct_kinova_torques.bash  plotjuggler.bash  rqt_graph_related.txt  test_collision_avoidance.bash  test_collision_avoidance_simulation.bash  test_launcher-body_joint_follower.bash  test_launcher-start_force_control.bash  test_launcher.bash  test_launcher_all_devices.bash  test_launcher_all_oarbots.bash  test_launcher_debugger_blue.bash  test_launcher_debugger_silver.bash  test_launcher_plotjuggler.bash  test_launcher_rqt_plotter.bash
device_management_scripts/: README.md  all_devices_git_pull.bash  all_devices_initial_setup-old.bash  all_devices_initial_setup.bash  all_devices_kinect_usb_reset.bash  all_devices_reboot.bash  all_devices_rosclean.bash  all_devices_shutdown.bash  (+4 more)
src/bota_rokubi_ft_sensor/rokubi_kinova_adapter/: package.xml  readme.md
src/bota_rokubi_ft_sensor/rokubi_kinova_adapter/config/: force_torque_plot_left.xml  force_torque_plot_right.xml  rokubi_with_kinova_adapter.rviz
src/bota_rokubi_ft_sensor/rokubi_kinova_adapter/docs/RokubiFTSensorAdapterKitGripperCADs/: ACC-KINOVA-ROK-ROK-P011_CONFIG-Default_REV-A.step  ACC-KINOVA-ROK-ROK-P012_CONFIG-Default_REV-A.step
src/bota_rokubi_ft_sensor/rokubi_kinova_adapter/launch/: display.launch
src/bota_rokubi_ft_sensor/rokubi_kinova_adapter/urdf/: BFT_ROKS_SER_M8.urdf.xacro  BFT_ROKS_SER_M8_robot.urdf.xacro
(+322 files in other folders)
